# funes-ts

./: .gitignore  Dockerfile  README.md  pyproject.toml  pyproject.toml.setuptools  tgan-torch-p3.9.yml  tgan-torch.yml
funes/datautils/: __init__.py  data-fetch.ipynb  data-filting.ipynb  data-processing.ipynb  data_fetch.py  data_filtering.py  data_loading.py  data_preprocess.py  data_processing.py  data_scrap.py  data_scrap_2022-3.py  data_scrap_2022.8.py  data_scrap_baiduyun.py  data_scrap_pystore.py  gen_data.py  split.py
funes/kat/: feature_record.py  kats_classifier.py  kats_fake_data.py  kats_multiclassifier.py  kats_test.py
funes/tgan/: README.md  __init__.py  __main__.py  current_grid_search.py  daily_inference.py  grid_search.py  grid_search_test.py  inference.py  inference_22.3.py  inference_22.8.py  inference_pystore.py  mix_tgan_config.py  mixed_data_grid_search.py  outlier_detection.py  resume_train.py  resume_training.py  run.sh  save_array.py  sine.py  sine_grid_search.py  square_grid_search.py  square_tgan_config.py  stock.py  stock_grid_search.py  stock_tgan_config.py  tgan_app.py  tgan_app_pystore.py  tgan_app_test.py  tgan_config.py  tgan_current.py  tgan_mixed_data.py  tgan_square_wave.py  tgan_triangle_wave.py  tgan_utils.py  train_with_apscheduler.py  triangle_grid_search.py  weekly_grid_search.py  weekly_inference.py  weekly_outlier_detection.py  weekly_tgan_app.py
funes/ttsgan/: GANModels.py  GANModels_1122.py  RunningGAN_Train.py  cfg.py  dataLoader.py  functions.py  sine_gan.py  sine_train.py  train_GAN.py  (+1 more)
res/: funes.xcf
(+19 files in other folders)
